@@ -1,153 +1,313 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>base</artifactId>
-    <groupId>org.sakaiproject</groupId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>org.sakaiproject.purepoms</groupId>
+        <artifactId>sakai-standard-tool</artifactId>
+        <version>2.9-SNAPSHOT</version>
+    </parent>
+
+    <name>sakai-site-manage base pom</name>
+    <groupId>org.sakaiproject.sitemanage</groupId>
+    <artifactId>sitemanage</artifactId>
     <version>2.9-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  <name>Sakai Site Manage Project</name>
-  <groupId>org.sakaiproject.sitemanage</groupId>
-  <artifactId>sitemanage</artifactId>
-  <packaging>pom</packaging>
-  <scm>
-    <connection>scm:svn:https://source.sakaiproject.org/svn/site-manage/trunk</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/site-manage/trunk</developerConnection>
-    <url>https://source.sakaiproject.org/svn/site-manage/trunk</url>
-  </scm>
-  <profiles>
-    <profile>
-      <id>framework</id>
-      <modules>
-        <module>site-manage-api/api</module>
-        <module>site-manage-help</module>
-        <module>site-manage-impl/impl</module>
-        <module>site-manage-impl/pack</module>
-        <module>site-manage-hbm</module>
-        <module>site-manage-tool/tool</module>
-        <module>site-manage-util/util</module>
-        <module>site-manage-group-helper/tool</module>
-	<module>site-manage-participant-helper</module>
-	<module>site-manage-link-helper</module>
-    <module>site-association-api/api</module>
-    <module>site-association-hbm/hbm</module>
-    <module>site-association-impl/impl</module>
-    <module>site-association-impl/pack</module>
-    <module>site-association-tool/tool</module>
-    <module>site-association-util/util</module>
-      </modules>
-    </profile>
-    <profile>
-      <id>full</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <modules>
-        <module>site-manage-api/api</module>
-        <module>site-manage-help</module>
-        <module>site-manage-impl/impl</module>
-        <module>site-manage-impl/pack</module>
-        <module>site-manage-hbm</module>
-        <module>site-manage-tool/tool</module>
-        <module>site-manage-util/util</module>
-        <module>pageorder/tool</module>
-        <module>site-manage-group-helper/tool</module>
-        <module>site-manage-group-section-role-helper/tool</module>
-        <module>site-manage-group-section-role-helper/pack</module>
-     	<module>site-manage-participant-helper</module> 
-     	<module>site-manage-link-helper</module> 
-        <module>site-association-api/api</module>
-    <module>site-association-hbm/hbm</module>
-    <module>site-association-impl/impl</module>
-    <module>site-association-impl/pack</module>
-    <module>site-association-tool/tool</module>
-    <module>site-association-util/util</module>
-     </modules>
-    </profile>
-  </profiles>
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.sakaiproject.sitemanage</groupId>
-        <artifactId>sakai-site-manage-api</artifactId>
-        <version>2.9-SNAPSHOT</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.sitemanage</groupId>
-        <artifactId>sakai-site-manage-util</artifactId>
-        <version>2.9-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.sitemanage</groupId>
-        <artifactId>sakai-site-manage-impl</artifactId>
-        <version>2.9-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.sitemanage</groupId>
-        <artifactId>sakai-site-manage-group-section-role-helper</artifactId>
-        <version>2.9-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.sitemanage</groupId>
-        <artifactId>sakai-site-manage-hbm</artifactId>
-        <version>2.9-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.velocity</groupId>
-        <artifactId>sakai-velocity-tool</artifactId>
-        <version>${sakai.velocity-tool.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>sakai-siteassociation-api</artifactId>
-        <version>2.9-SNAPSHOT</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>sakai-siteassociation-hbm</artifactId>
-        <version>2.9-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>sakai-siteassociation-impl</artifactId>
-        <version>2.9-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>sakai-siteassociation-util</artifactId>
-        <version>2.9-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.jsf</groupId>
-        <artifactId>jsf-tool</artifactId>
-        <version>${sakai.jsf.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.jsf</groupId>
-        <artifactId>jsf-app</artifactId>
-        <version>${sakai.jsf.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.osp</groupId>
-        <artifactId>osp-depend-jsf-widgets-sun</artifactId>
-        <version>2.9-SNAPSHOT</version>
-        <type>pom</type>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.jsf</groupId>
-        <artifactId>jsf-widgets-sun-depend</artifactId>
-        <version>${sakai.jsf.version}</version>
-        <type>pom</type>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.jsf</groupId>
-        <artifactId>myfaces-widgets-depend</artifactId>
-        <version>${sakai.jsf.version}</version>
-        <type>pom</type>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+    <packaging>pom</packaging>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <sakai.announcement.version>2.9-SNAPSHOT</sakai.announcement.version>
+        <sakai.common.version>1.2-SNAPSHOT</sakai.common.version>
+        <sakai.edu-services.version>1.2-SNAPSHOT</sakai.edu-services.version>
+        <sakai.emailtemplateservice.version>0.6-SNAPSHOT</sakai.emailtemplateservice.version>
+        <sakai.jsf.version>2.9-SNAPSHOT</sakai.jsf.version>
+        <sakai.osp.version>2.9-SNAPSHOT</sakai.osp.version>
+        <sakai.reset-pass.version>2.9-SNAPSHOT</sakai.reset-pass.version>
+        <sakai.sakai-mock.version>2.9-SNAPSHOT</sakai.sakai-mock.version>
+        <sakai.velocity-tool.version>2.9-SNAPSHOT</sakai.velocity-tool.version>
+        <url.localsite>scp://source.sakaiproject.org/var/www/html/release/site-manage/${project.version}</url.localsite>
+    </properties>
+
+    <profiles>
+        <profile>
+            <id>framework</id>
+            <modules>
+                <module>site-association-api/api</module>
+                <module>site-association-assembly</module>
+                <module>site-association-hbm/hbm</module>
+                <module>site-association-impl/impl</module>
+                <module>site-association-impl/pack</module>
+                <module>site-association-tool/tool</module>
+                <module>site-association-util/util</module>
+                <module>site-manage-api/api</module>
+                <module>site-manage-assembly</module>
+                <module>site-manage-hbm</module>
+                <module>site-manage-help</module>
+                <module>site-manage-impl/impl</module>
+                <module>site-manage-impl/pack</module>
+                <module>site-manage-tool/tool</module>
+                <module>site-manage-util/util</module>
+                <module>site-manage-group-helper/tool</module>
+                <module>site-manage-participant-helper</module>
+                <module>site-manage-link-helper</module>  
+            </modules>
+        </profile>
+        <profile>
+            <id>full</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <modules>
+                <module>pageorder/tool</module>
+                <module>pageorder-assembly</module>
+                <module>site-association-api/api</module>
+                <module>site-association-assembly</module>
+                <module>site-association-hbm/hbm</module>
+                <module>site-association-impl/impl</module>
+                <module>site-association-impl/pack</module>
+                <module>site-association-tool/tool</module>
+                <module>site-association-util/util</module>
+                <module>site-manage-api/api</module>
+                <module>site-manage-assembly</module>
+                <module>site-manage-hbm</module>
+                <module>site-manage-help</module>
+                <module>site-manage-impl/impl</module>
+                <module>site-manage-impl/pack</module>
+                <module>site-manage-tool/tool</module>
+                <module>site-manage-util/util</module>
+                <module>site-manage-group-helper/tool</module>
+                <module>site-manage-group-section-role-helper/tool</module>
+                <module>site-manage-group-section-role-helper/pack</module>
+                <module>site-manage-participant-helper</module>
+                <module>site-manage-link-helper</module>
+            </modules>
+        </profile>
+    </profiles>
+
+    <scm>
+        <connection>scm:svn:https://source.sakaiproject.org/svn/site-manage/trunk</connection>
+        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/site-manage/trunk</developerConnection>
+        <url>https://source.sakaiproject.org/svn/site-manage/trunk</url>
+    </scm>
+
+    <distributionManagement>
+        <downloadUrl>http://source.sakaiproject.org/maven2/</downloadUrl>
+        <snapshotRepository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>sakai-maven-snapshots-scp</id>
+            <name>Sakai snapshot Repo</name>
+            <url>scp://source.sakaiproject.org/var/www/html/maven2-snapshots</url>
+            <layout>default</layout>
+        </snapshotRepository>
+        <repository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>sakai-maven2-scp</id>
+            <name>Sakai maven2 repository</name>
+            <url>scp://source.sakaiproject.org/var/www/html/maven2</url>
+            <layout>default</layout>
+        </repository>
+        <site>
+            <id>sakai-site</id>
+            <name>Sakai release Site</name>
+            <url>${url.localsite}</url>
+        </site>
+    </distributionManagement>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>maven2-central-repo</id>
+            <name>Maven2 Central Repo</name>
+            <url>http://repo1.maven.org/maven2/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>Sakai Plugin Repo</id>
+            <url>http://source.sakaiproject.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
+
+    <repositories>
+        <repository>
+            <id>sakai-maven</id>
+            <name>Sakai Maven Repo</name>
+            <layout>default</layout>
+            <url>http://source.sakaiproject.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>sakai-maven2-snapshots</id>
+            <name>Sakai Maven Repo</name>
+            <layout>default</layout>
+            <url>http://source.sakaiproject.org/maven2-snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>default</id>
+            <name>Maven Repository Switchboard</name>
+            <layout>default</layout>
+            <url>http://repo1.maven.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>sakai-site-manage-api</artifactId>
+                <version>${project.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>sakai-site-manage-hbm</artifactId>
+                <version>${project.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>sakai-site-manage-impl</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>sakai-site-manage-group-section-role-helper</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>sakai-site-manage-util</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>sakai-siteassociation-api</artifactId>
+                <version>${project.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>sakai-siteassociation-hbm</artifactId>
+                <version>${project.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>sakai-siteassociation-impl</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>sakai-siteassociation-util</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.sakaiproject.edu-services.course-management</groupId>
+                <artifactId>coursemanagement-api</artifactId>
+                <version>${sakai.edu-services.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.sakaiproject.jsf</groupId>
+                <artifactId>jsf-tool</artifactId>
+                <version>${sakai.jsf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.sakaiproject.jsf</groupId>
+                <artifactId>jsf-app</artifactId>
+                <version>${sakai.jsf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.sakaiproject.jsf</groupId>
+                <artifactId>jsf-widgets-sun-depend</artifactId>
+                <version>${sakai.jsf.version}</version>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.sakaiproject.jsf</groupId>
+                <artifactId>myfaces-widgets-depend</artifactId>
+                <version>${sakai.jsf.version}</version>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.sakaiproject.osp</groupId>
+                <artifactId>osp-depend-jsf-widgets-sun</artifactId>
+                <version>${sakai.osp.version}</version>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.sakaiproject.velocity</groupId>
+                <artifactId>sakai-velocity-tool-api</artifactId>
+                <version>${sakai.velocity-tool.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.sakaiproject.velocity</groupId>
+                <artifactId>sakai-velocity-tool</artifactId>
+                <version>${sakai.velocity-tool.version}</version>
+            </dependency>
+            <!--
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.6</version>
+                <scope>provided</scope>
+            </dependency>
+            -->
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>servlet-api</artifactId>
+                <version>2.4</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <debug>true</debug>
+                    <links>
+                        <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
+                        <link>http://download.oracle.com/javase/6/docs/api/</link>
+                    </links>
+                    <breakiterator>true</breakiterator>
+                    <verbose>false</verbose>
+                    <aggregate>true</aggregate>
+                    <minmemory>168m</minmemory>
+                    <maxmemory>1024m</maxmemory>
+                    <additionalJOption>-J-Xms168m -J-Xmx1024m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
